--- a/lpv1/index.html
+++ b/lpv1/index.html
@@ -118,7 +118,7 @@
           </div>
           <a href="#" class="promo__button"
             >Join now and get up to<br />
-            a $2,000 welcome bonus.</a
+            a $2,000 welcome bonus</a
           >
           <div class="promo__remark">
             *Gambling laws vary from one jurisdiction to another. Before
@@ -588,10 +588,7 @@
       <div class="banner__container">
         <div class="banner__wrapper">
           <div class="banner__ribbon desktop-only">
-            <img
-              src="images/banner_ribbon_desk.png"
-              alt="banner ribbon"
-            />
+            <img src="images/banner_ribbon_desk.png" alt="banner ribbon" />
           </div>
           <div class="banner__ribbon no-mobile no-desktop">
             <img src="images/banner_ribbon_tab.png" alt="banner ribbon" />
