--- a/lpv2/index.html
+++ b/lpv2/index.html
@@ -169,7 +169,7 @@
             <img src="images/slots-desk.png" alt="slots" />
           </div>
           <div class="games__slots_topImg no-desktop no-mobile">
-            <img src="images/slots-tab.png" alt="slots" />
+            <img src="images/slots_tab.png" alt="slots" />
           </div>
           <div class="games__slots_topImg mobile-only">
             <img src="images/slots-mob.png" alt="slots" />
