--- a/lpv3/index.html
+++ b/lpv3/index.html
@@ -28,6 +28,14 @@
               <img src="images/logo.svg" alt="logo" />
             </a>
           </div>
+          <div class="header__buttons">
+            <a href="#">
+              <div class="header__logIn">Log in</div>
+            </a>
+            <a href="#">
+              <div class="header__signUp">Sign up</div>
+            </a>
+          </div>
           <h2 class="header__title"><span>Up to </span> 2,000$ Bonus</h2>
           <div class="header__ribbon desktop-only">
             <img src="images/header_ribbon_desk.png" alt="header ribbon" />
@@ -81,15 +89,15 @@
             stands between you and an enjoyable gaming experience.
           </div>
           <a href="#" class="join__button">REGISTER NOW</a>
-          <div class="join__subtitle">
+          <!-- <div class="join__subtitle">
             Join <span>Win</span>SpinBet today and feel a first-hand online
             gambling experience!
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
 
-    <section class="promo">
+    <!-- <section class="promo">
       <div class="promo__title">
         Have you played<br />
         John Hunter and the<br class="mobile-only" />
@@ -722,6 +730,6 @@
 
     <script src="scripts/jquery-1.11.0.min.js"></script>
     <script src="scripts/slick.min.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/main.js"></script> -->
   </body>
 </html>
