--- a/lpv3_top_buttons/index.html
+++ b/lpv3_top_buttons/index.html
@@ -92,5 +92,97 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="footer__logos">
+        <img src="images/footer-logos.png" alt="" />
+      </div>
+      <div class="footer__top">
+        <img src="images/footer-logo.svg" alt="" />
+        <p>
+          WinSpinBet -<br class="mobile-only" />
+          Best Entertainment Platform.<br />
+          This website is operated by Genex N.V. with a registered address at
+          Abraham De Veerstraat 9, Curacao, P.O. BOX 3421, Curacao. This service
+          operated under License No. GLH-OCCHKTW0701122022 issued to Curacao
+          eGaming. Payment Agent Genextion Ltd (reg. number HE 431443) with a
+          registered address at Griva Digeni 3, Patsalos house, 4th Floor,
+          Office 401, 6030, Larnaca, Cyprus.
+          <br /><br />
+          © 2023 winspinbet.com All Right Reserved
+        </p>
+      </div>
+      <div class="footer__line"></div>
+      <div class="footer__container container">
+        <div class="footer__bottom">
+          <div class="footer__info">
+            <div class="footer__info-operator">
+              <img alt="" src="images/footer-operator.svg" />
+              Verified Operator
+            </div>
+            <p class="footer__info-age">18+</p>
+          </div>
+          <div class="footer__links">
+            <div class="footer__links-section">
+              <p class="footer__links-title">Casino</p>
+              <a class="footer__links-link" href="https://www.winspinbet.com/"
+                >Casino</a
+              >
+              <a
+                class="footer__links-link"
+                href="https://www.winspinbet.com/promotions"
+                >Promotions</a
+              >
+            </div>
+            <div class="footer__links-section">
+              <p class="footer__links-title">Support</p>
+              <a
+                class="footer__links-link"
+                href="https://www.winspinbet.com/faq"
+                >FAQ</a
+              >
+            </div>
+            <div class="footer__links-section">
+              <p class="footer__links-title">About Us</p>
+              <a
+                class="footer__links-link"
+                href="https://www.winspinbet.com/terms-and-conditions"
+                >Terms and Conditions</a
+              >
+              <a
+                class="footer__links-link"
+                href="https://www.winspinbet.com/bonuses-gifts"
+                >Bonuses and Gifts</a
+              >
+              <a
+                class="footer__links-link"
+                href="https://www.winspinbet.com/privacy-policy"
+                >Privacy Policy</a
+              >
+              <a
+                class="footer__links-link"
+                href="https://www.winspinbet.com/about-us"
+                >About us</a
+              >
+              <a
+                class="footer__links-link"
+                href="https://www.winspinbet.com/contact-us"
+                >Contact us</a
+              >
+              <a
+                class="footer__links-link"
+                href="https://www.winspinbet.com/responsible-gambling"
+                >Responsible gambling</a
+              >
+              <a
+                class="footer__links-link"
+                target="_blank"
+                href="https://mangopartner.com/"
+                >Affiliate Program</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
